--- a/css/style.css
+++ b/css/style.css
@@ -64,10 +64,10 @@ input[type="text"]{
 footer {
   background-color: #F15323;
   width: 100%;
-  position: fixed;
+  /*position: fixed;
   left: 0;
   bottom: 0;
-  z-index: -1;
+  z-index: -1;*/
 }
 
 footer p {
